add publish interceptor

--- a/RescuePC.Software.CQRS/RescuePC.Software.CQRS.csproj
+++ b/RescuePC.Software.CQRS/RescuePC.Software.CQRS.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-	<Version>2.0.0</Version>
+	<Version>2.0.1</Version>
 	<Authors>Wiktor Wijata</Authors>
 	<Company>RescuePC Software</Company>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
